--- a/omod/src/main/webapp/resources/htmlforms/labResults.html
+++ b/omod/src/main/webapp/resources/htmlforms/labResults.html
@@ -165,49 +165,7 @@
 			</tr>
 		</table>
 		</fieldset>
-		<fieldset>
-			<legend>Other Laboratory Investigations</legend>
-			<table>
-				<tr>
-				<tr>
-					<td>Lab Name</td>
-					<td>Order Reason</td>
-					<td>Date Ordered</td>
-					<td>Result</td>
-					<td>Date Collected</td>
-				</tr>
-				<repeat>
-					<template>
-						<obsgroup groupingConceptId="1271AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
-							<tr>
-								<td>
-									<obs conceptId="1271AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-
-								</td>
-								<td>
-									<obs conceptId="160288AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-										 answerConceptIds="162080AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160523AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,161256AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,151685AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-										 answerLabels="Baseline,Routine,Confirmatory,Suspected Drug Resistance,Other,"
-										 style="dropdowm"  />
-								</td>
-								<td>
-									<obs id="next-apt-date" conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" />
-								</td>
-								<td><obs conceptId="32AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" dateLabel="&lt;/td&gt;&lt;td&gt;"/></td>
-							</tr>
-						</obsgroup>
-					</template>
-					<render n="1" concept=" " />
-					<render n="2" concept=" " />
-					<render n="3" concept=" " />
-					<render n="4" concept=" " />
-					<render n="5" concept=" " />
-				</repeat>
-				</tr>
-
-
-		</table>
-		</fieldset></div>
+		</div>
 	<div class="ke-form-footer">
 		<submit />
 	</div>
