removed namespace attribute that was appended to htmlform tag

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -14,7 +14,7 @@
 <!--
 Green Card follow-up visit form
 -->
-<htmlform xmlns="http://www.w3.org/1999/html">
+<htmlform>
     <style type="text/css">
         table.right-aligned-first td:first-child {
             text-align: right;
