added navigation bar for hyperlinks

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -19,6 +19,12 @@ Green Card follow-up visit form
         table.right-aligned-first td:first-child {
             text-align: right;
         }
+
+        .link {
+            text-align: center;
+            border:2px solid darkgray;
+            padding: inherit;
+        }
     </style>
 
     <script type="text/javascript">
@@ -515,6 +521,9 @@ Green Card follow-up visit form
 
     <div class="ke-form-content">
         <!-- These initial sections are duplicated from triage.xml, so try to keep them in sync -->
+        <div class="link">
+            <b>Vitals</b> | <a href="#page2">Complaints</a> | <a href="#page2">Patient Screening</a> | <a href="#page3">Physical Examination</a> | <a href="#page3">Adverse Events</a> | <a href="#page3">Allergies</a> | <a href="#page3">Chronic Illnesses</a>| <a href="#page3">Treatment Plan</a>
+        </div>
         <fieldset>
             <legend>Visit Type</legend>
             <!--pw greencard additions visit type and appointment type -->
@@ -696,7 +705,9 @@ Green Card follow-up visit form
             </table>
         </fieldset>
         <!--Presenting complaints today-->
-
+        <div class="link">
+            <b>Vitals</b> | <a href="#page2">Complaints</a> | <a href="#page2">Patient Screening</a> | <a href="#page3">Physical Examination</a> | <a href="#page3">Adverse Events</a> | <a href="#page3">Allergies</a> | <a href="#page3">Chronic Illnesses</a>| <a href="#page3">Treatment Plan</a>
+        </div>
         <fieldset>
             <legend>Complaints and History of complaints</legend>
 
@@ -754,6 +765,9 @@ Green Card follow-up visit form
 
         </fieldset>
 <!-- Additional History  -->
+        <div class="link">
+            <b>Vitals</b> | <a href="#page2">Complaints</a> | <a href="#page2">Patient Screening</a> | <a href="#page3">Physical Examination</a> | <a href="#page3">Adverse Events</a> | <a href="#page3">Allergies</a> | <a href="#page3">Chronic Illnesses</a>| <a href="#page3">Treatment Plan</a>
+        </div>
         <fieldset>
             <legend>Additional History</legend>
             <!--TB Screening-->
@@ -1033,7 +1047,9 @@ Green Card follow-up visit form
                 </table>
 
             </fieldset>
-
+            <div class="link">
+                <b>Vitals</b> | <a href="#page2">Complaints</a> | <a href="#page2">Patient Screening</a> | <a href="#page3">Physical Examination</a> | <a href="#page3">Adverse Events</a> | <a href="#page3">Allergies</a> | <a href="#page3">Chronic Illnesses</a>| <a href="#page3">Treatment Plan</a>
+            </div>
             <!--Adverse Drug Reactions-->
             <fieldset>
                 <legend>Adverse Drug Reactions</legend>
@@ -1154,7 +1170,9 @@ Green Card follow-up visit form
             </fieldset>
 
             <!--Chronic Illnesses-->
-
+            <div class="link">
+                <b>Vitals</b> | <a href="#page2">Complaints</a> | <a href="#page2">Patient Screening</a> | <a href="#page3">Physical Examination</a> | <a href="#page3">Adverse Events</a> | <a href="#page3">Allergies</a> | <a href="#page3">Chronic Illnesses</a>| <a href="#page3">Treatment Plan</a>
+            </div>
             <fieldset>
                 <legend>Chronic Illnesses and Cormobidities</legend>
                 <table cellspacing="0">
@@ -1458,6 +1476,9 @@ Green Card follow-up visit form
 
         <!--Physical Examination-->
             <!--General Examination-->
+            <div class="link">
+                <b>Vitals</b> | <a href="#page2">Complaints</a> | <a href="#page2">Patient Screening</a> | <a href="#page3">Physical Examination</a> | <a href="#page3">Adverse Events</a> | <a href="#page3">Allergies</a> | <a href="#page3">Chronic Illnesses</a>| <a href="#page3">Treatment Plan</a>
+            </div>
             <fieldset>
                 <legend>General Examination</legend>
                 <table cellspacing="0">
