--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
@@ -412,7 +412,14 @@
 					<td style="text-align: left;">Name</td>
 					<td><obs conceptId="160638AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" size="40"/></td>
 					<td style="text-align: left;">Relationship</td>
-					<td><obs conceptId="160640AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></td>
+
+					<td>
+						<obs
+								id="treatment-supporter-relationship" conceptId="160640AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="dropdown"
+								answerConceptIds="973AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,972AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160639AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1527AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5617AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,163565AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+								answerLabels="Grandparent,Sibling,Guardian,Parent,Spouse,Partner,Other"
+						/>
+					</td>
 				</tr>
 				<tr>
 					<td style="text-align: left;">Postal Address</td>
