removed inline comment preventing form from passing validation test

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -13,7 +13,6 @@
 -->
 <!--
 Green Card follow-up visit form
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>  -->
 -->
 <htmlform>
 
@@ -782,7 +781,6 @@ Green Card follow-up visit form
 
         });
     </script>
-    <!--<uiInclude provider="kenyaemr" javascript="moment.js"></uiInclude>-->
     <div class="ke-form-header">
         <table width="100%">
             <tr>
@@ -1404,7 +1402,7 @@ Green Card follow-up visit form
                                     <th>Reaction</th>
                                     <th>Severity</th>
                                     <th>Date of Onset</th>
-                                    <th>Action taken</th>  <!-- pw.Greencard additions action taken missing question id -->
+                                    <th>Action taken</th>
                                 </tr>
                                 <repeat>
                                     <template>
