--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
@@ -19,22 +19,28 @@
          */
         var YES_CONCEPT_ID = 1065;
         var NO_CONCEPT_ID = 1066;
+        var TRANSIT =5622;
 
         var ctxPath = typeof openmrsContextPath === 'string' ? openmrsContextPath : OPENMRS_CONTEXT_PATH;
 
         function onTransferStatusChange() {
-            if (getValue('transfer-status.value') == NO_CONCEPT_ID) {
+            if (getValue('transfer-in-status.value') == NO_CONCEPT_ID) {
                 jq('#transfer-details :input').prop('disabled', true);
                 jq('#hiv-id :input').prop('disabled', false);
                 jq('#generate-hiv-id').show();
-            } else if (getValue('transfer-status.value') == YES_CONCEPT_ID) {
+            } else if (getValue('transfer-in-status.value') == YES_CONCEPT_ID) {
                 jq('#transfer-details :input').prop('disabled', false);
                 jq('#hiv-id :input').prop('disabled', false);
                 jq('#generate-hiv-id').hide();
-            } else {
+            } else if (getValue('transfer-in-status.value') == TRANSIT) {
+                jq('#transfer-details :input').prop('disabled', false);
+                jq('#hiv-id :input').prop('disabled', false);
+                jq('#generate-hiv-id').hide();
+            }else{
                 jq('#transfer-details :input').prop('disabled', true);
                 jq('#hiv-id :input').prop('disabled', true);
                 jq('#generate-hiv-id').hide();
+
             }
         }
 
@@ -71,7 +77,7 @@
         }
 
         jq(function() {
-            jq('#transfer-status input').click(onTransferStatusChange);
+            jq('#transfer-in-status input').click(onTransferStatusChange);
             jq('#art-status input').click(onArtStatusChange);
             jq('#generate-hiv-id').click(onUpnGenerateClick);
 
@@ -154,26 +160,18 @@
 					</td>
 					<!-- .pw greencard additions increased entry points -->
 				</tr>
+				<tr></tr>
 				<tr>
-					<td>Transfer in</td>
+					<td>Patient Type</td>
 					<td>
 						<obs
-								id="transfer-status" conceptId="160563AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio"
-								answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-								answerLabels="Yes,No"
+								id="transfer-in-status" conceptId="160563AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio"
+								answerConceptIds="1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+								answerLabels="New Patient,Transfer in,Transit"
 						/>
 					</td>
 				</tr>
-				<tr>
-					<td>Transit*</td>
-					<td>
-						<obs
-								id="transfer-status" conceptId="160563AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio"
-								answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-								answerLabels="Yes,No"
-						/>
-					</td>
-				</tr>
+
 				<excludeIf velocityTest="$kenyaemr.hasHivUniquePatientNumber()">
 					<tr>
 						<td>Unique Patient Number (UPN)</td>
@@ -191,17 +189,17 @@
 						<td>Transfer in date:</td>
 						<td><obs conceptId="160534AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
 					</tr>
-					<tr>
-						<!-- .pw greencard additions added counties -->
-						<td>Transferred from facility:</td>
-						<td><obs conceptId="160535AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /> in County*:
-							<select>
-								<option value="Select">Select</option>
-								<option value="Siaya">Siaya</option>
-								<option value="Kisumu">Kisumu</option>
-								<option value="Nairobi">Nairobi</option>
-							</select> </td>
-					</tr>
+					<!--<tr>-->
+						<!--&lt;!&ndash; .pw greencard additions added counties &ndash;&gt;-->
+						<!--<td>Transferred from facility:</td>-->
+						<!--<td><obs conceptId="160535AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /> in County*:-->
+							<!--<select>-->
+								<!--<option value="Select">Select</option>-->
+								<!--<option value="Siaya">Siaya</option>-->
+								<!--<option value="Kisumu">Kisumu</option>-->
+								<!--<option value="Nairobi">Nairobi</option>-->
+							<!--</select> </td>-->
+					<!--</tr>-->
 					<tr>
 						<td>Date <i>first</i> enrolled in HIV care:</td>
 						<td><obs conceptId="160555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
@@ -231,18 +229,19 @@
 
 					</td>
 				</tr>
-				<tr>
-					<td>Patient has been on ARVs (inc. PEP &amp; PMTCT)</td>
-					<td>
-						<obs id="art-status" conceptId="160533AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="yes_no" />
-					</td>
-				</tr>
 				<!-- pw greencard additions who stage -->
 				<tr>
 					<td>WHO Stage*  </td>
 					<td>  <obs id="whostage" conceptId="5356AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
 				</tr>
 				<!-- .pw greencard additions who stage -->
+				<tr>
+					<td>Patient has been on ARVs (inc. PEP &amp; PMTCT)</td>
+					<td>
+						<obs id="art-status" conceptId="160533AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="yes_no" />
+					</td>
+				</tr>
+
 			</table>
 
 			<br />
@@ -412,7 +411,6 @@
 					<td style="text-align: left;">Name</td>
 					<td><obs conceptId="160638AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" size="40"/></td>
 					<td style="text-align: left;">Relationship</td>
-
 					<td>
 						<obs
 								id="treatment-supporter-relationship" conceptId="160640AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="dropdown"
@@ -420,8 +418,22 @@
 								answerLabels="Grandparent,Sibling,Guardian,Parent,Spouse,Partner,Other"
 						/>
 					</td>
+					<td style="text-align: left;">Postal Address</td>
+					<td><obs conceptId="160641AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" size="40"/></td>
+					<td style="text-align: left;">Telephone number</td>
+					<td><obs conceptId="160642AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></td>
 				</tr>
 				<tr>
+					<td style="text-align: left;">Name</td>
+					<td><obs conceptId="160638AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" size="40"/></td>
+					<td style="text-align: left;">Relationship</td>
+					<td>
+						<obs
+								id="treatment-supporter-relationship" conceptId="160640AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="dropdown"
+								answerConceptIds="973AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,972AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160639AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1527AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5617AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,163565AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+								answerLabels="Grandparent,Sibling,Guardian,Parent,Spouse,Partner,Other"
+						/>
+					</td>
 					<td style="text-align: left;">Postal Address</td>
 					<td><obs conceptId="160641AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" size="40"/></td>
 					<td style="text-align: left;">Telephone number</td>
